# python-agify

./: pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: pylint.yml
agify/: __init__.py  __main__.py
test/agify/: test_agify.py
